--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,11 @@
   <body>
     <h1>Hello</h1>
     <div class="slider">
-      <h1>Hello 1</h1>
+      <h1>Hello 1 world sasas fffdffff</h1>
     </div>
+    <img
+      src="./img/animals-khaski-sobaka-vozvishennost-sneg-86721.jpeg"
+      alt="dog"
+    />
   </body>
 </html>
