--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,24 @@
   </head>
 
   <body>
-    <h1>Hello</h1>
-    <div class="slider">
-      <h1>Hello 1 world sasas fffdffff</h1>
+    <div class="wrapper">
+      <div class="slider-container">
+        <div class="slider-track">
+          <div class="slider-item"></div>
+          <div class="slider-item"></div>
+          <div class="slider-item"></div>
+          <div class="slider-item"></div>
+          <div class="slider-item"></div>
+          <div class="slider-item"></div>
+          <div class="slider-item"></div>
+          <div class="slider-item"></div>
+          <div class="slider-item"></div>
+        </div>
+      </div>
+      <div class="slider-buttons">
+        <button class="btn-prev">Prev</button>
+        <button class="btn-next">Next</button>
+      </div>
     </div>
-    <img
-      src="./img/animals-khaski-sobaka-vozvishennost-sneg-86721.jpeg"
-      alt="dog"
-    />
   </body>
 </html>
