--- a/src/index.html
+++ b/src/index.html
@@ -8,37 +8,34 @@
   </head>
 
   <body>
-    <div class="slider">
-      <div class="slider__body">
-        <button class="slider__prev btn">❮</button>
+    <div class="calc">
+      <div class="calc-screen">
+        <p>0</p>
+      </div>
+      <div class="buttons">
+        <div class="btn ac bg-grey">ac</div>
+        <div class="btn plus-minus bg-grey">+/-</div>
+        <div class="btn percent bg-grey">%</div>
+        <div class="btn division bg-orange">/</div>
 
-        <div class="slider__container">
-          <div class="slider__track" style="transform: translateX(-456px)">
-            <div class="slider__slide">
-              <img src="./img/chicken.png" alt="slide" />
-            </div>
-            <div class="slider__slide">
-              <img src="./img/hamburger.png" alt="slide" />
-            </div>
-            <div class="slider__slide">
-              <img src="./img/meat-ball.png" alt="slide" />
-            </div>
-            <div class="slider__slide">
-              <img src="./img/pizza.png" alt="slide" />
-            </div>
-            <div class="slider__slide">
-              <img src="./img/rice.png" alt="slide" />
-            </div>
-            <div class="slider__slide">
-              <img src="./img/sausage.png" alt="slide" />
-            </div>
-            <div class="slider__slide">
-              <img src="./img/shrimp.png" alt="slide" />
-            </div>
-          </div>
-        </div>
+        <div class="btn seven">7</div>
+        <div class="btn eight">8</div>
+        <div class="btn nine">9</div>
+        <div class="btn multiply bg-orange">X</div>
 
-        <button class="slider__next btn" disabled="">❯</button>
+        <div class="btn four">4</div>
+        <div class="btn five">5</div>
+        <div class="btn six">6</div>
+        <div class="btn minus bg-orange">-</div>
+
+        <div class="btn one">1</div>
+        <div class="btn two">2</div>
+        <div class="btn three">3</div>
+        <div class="btn plus bg-orange">+</div>
+
+        <div class="btn zero">0</div>
+        <div class="btn dot">.</div>
+        <div class="btn equal bg-orange">=</div>
       </div>
     </div>
   </body>
