--- a/src/index.html
+++ b/src/index.html
@@ -10,32 +10,32 @@
   <body>
     <div class="calc">
       <div class="calc-screen">
-        <p>0</p>
+        <input value="0" type="text" class="result" />
       </div>
       <div class="buttons">
-        <div class="btn ac bg-grey">ac</div>
-        <div class="btn plus-minus bg-grey">+/-</div>
-        <div class="btn percent bg-grey">%</div>
-        <div class="btn division bg-orange">/</div>
+        <button value="ac" class="btn ac bg-grey">ac</button>
+        <button value="+/-" class="btn plus-minus bg-grey">+/-</button>
+        <button value="%" class="btn percent bg-grey">%</button>
+        <button value="/" class="btn division bg-orange">/</button>
 
-        <div class="btn seven">7</div>
-        <div class="btn eight">8</div>
-        <div class="btn nine">9</div>
-        <div class="btn multiply bg-orange">X</div>
+        <button value="7" class="btn seven">7</button>
+        <button value="8" class="btn eight">8</button>
+        <button value="9" class="btn nine">9</button>
+        <button value="*" class="btn multiply bg-orange">X</button>
 
-        <div class="btn four">4</div>
-        <div class="btn five">5</div>
-        <div class="btn six">6</div>
-        <div class="btn minus bg-orange">-</div>
+        <button value="4" class="btn four">4</button>
+        <button value="5" class="btn five">5</button>
+        <button value="6" class="btn six">6</button>
+        <button value="-" class="btn minus bg-orange">-</button>
 
-        <div class="btn one">1</div>
-        <div class="btn two">2</div>
-        <div class="btn three">3</div>
-        <div class="btn plus bg-orange">+</div>
+        <button value="1" class="btn one">1</button>
+        <button value="2" class="btn two">2</button>
+        <button value="3" class="btn three">3</button>
+        <button value="+" class="btn plus bg-orange">+</button>
 
-        <div class="btn zero">0</div>
-        <div class="btn dot">.</div>
-        <div class="btn equal bg-orange">=</div>
+        <button value="0" class="btn zero">0</button>
+        <button value="." class="btn dot">.</button>
+        <button value="=" class="btn equal bg-orange">=</button>
       </div>
     </div>
   </body>
